fix overlap and pointer events issue on mobile (#1978)

--- a/website/static/css/header.css
+++ b/website/static/css/header.css
@@ -199,9 +199,8 @@ input#search_input_react:focus {
 }
 
 /* Overrides for the announcement banner */
-.slidingNav {
-  /* On mobile, the nav needs pointer events to pass through to the banner. */
-  pointer-events: none;
+.navigationSlider .slidingNav {
+  height: 60px;
 }
 
 .announcement {
